<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AGROCAST</string>
    <string name="form_instructions">Please fill and submit this form to report any case of infestation </string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_report_form">ReportForm</string>
    <string name="title_activity_diary">Diary</string>
    <string name="title_activity_settings">Settings</string>
    <string name="pref_emergency_default" translatable="false">""</string>
    <string name="pref_emergency_label">VETERINARY CONTACT</string>
    <string name="pref_emergency_key" translatable="false">contact</string>
    <string name="pref_supplier_default" translatable="false">""</string>
    <string name="pref_supplier_label">SUPPLIER CONTACT</string>
    <string name="pref_supplier_key" translatable="false">supplier</string>
    <string name="title_activity_view_log">ViewLog</string>
    <string name="title_activity_all_user">AllUserActivity</string>
    <string name="title_activity_contact_vet">ContactVet</string>
    <string name="title_activity_analysis">Analysis</string>

</resources>
